--- a/index.ipynb
+++ b/index.ipynb
@@ -37,21 +37,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 6\n"
+     ]
+    }
+   ],
    "source": [
     "slices_of_pie = 6\n",
     "slices_eaten = 0\n",
     "# use a while loop to eat each slice of pie\n",
-    "# add each slice to the slices_eaten variable"
+    "# add each slice to the slices_eaten variable\n",
+    "\n",
+    "while slices_of_pie > 0:\n",
+    "    slices_eaten += 1\n",
+    "    slices_of_pie -= 1\n",
+    "print(slices_of_pie, slices_eaten)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1198 5\n"
+     ]
+    }
+   ],
    "source": [
     "time_for_breakfast = 1468 # in seconds\n",
     "number_of_cooked_pancakes = 0\n",
@@ -59,7 +80,13 @@
     "# each pancake takes 27 seconds to cook on each side\n",
     "# you must decrease the time_for_breakfast each time you \n",
     "# add a pancake to the skillet (frying pan) or flip a pancake (i.e. 2 times per pancake)\n",
-    "# there is only room for one pancake at a time"
+    "# there is only room for one pancake at a time\n",
+    "\n",
+    "while number_of_cooked_pancakes < 5:\n",
+    "    if time_for_breakfast >= 54:\n",
+    "        time_for_breakfast -= 54\n",
+    "        number_of_cooked_pancakes += 1\n",
+    "print(time_for_breakfast, number_of_cooked_pancakes)"
    ]
   },
   {
@@ -78,16 +105,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15 15\n"
+     ]
+    }
+   ],
    "source": [
     "line_of_hungry_patrons = list(range(0,30))\n",
     "fed_patrons = []\n",
-    "# use a while loop to to feed the hungry patrons who have an even number\n",
+    "# use a while loop to feed the hungry patrons who have an even number\n",
     "# add the patrons with an even number to the fed_patrons list\n",
     "# then remove the even numbered patrons from the line_of_hungry_patrons\n",
-    "# each list should contain 15 elements"
+    "# each list should contain 15 elements\n",
+    "\n",
+    "while len(line_of_hungry_patrons) > 15:\n",
+    "    for num in line_of_hungry_patrons:\n",
+    "        if num %2 == 0:\n",
+    "            fed_patrons.append(num)\n",
+    "            line_of_hungry_patrons.remove(num)\n",
+    "print(len(line_of_hungry_patrons), len(fed_patrons))"
    ]
   },
   {
@@ -106,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,9 +164,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 {'name': 'Katie', 'age': 30, 'job': 'Teacher', 'pet': 'Dog', 'pet_name': 'Frank'}\n"
+     ]
+    }
+   ],
    "source": [
     "# use the for loop below to find the *first* person in the list of people that has a dog as their pet\n",
     "# the iteration count shouldn't exceed 2 iterations\n",
@@ -132,49 +182,105 @@
     "iteration_count = 0\n",
     "for person in people:\n",
     "    iteration_count += 1\n",
-    "    pass"
+    "    if person['pet'] != \"Dog\":\n",
+    "        continue\n",
+    "    else:\n",
+    "        first_dog_person = person\n",
+    "        break\n",
+    "print(iteration_count, first_dog_person)\n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Owen', 'age': 26, 'job': 'Sales person', 'pet': 'Cat', 'pet_name': 'Cosmo'}, {'name': 'Josh', 'age': 22, 'job': 'Student', 'pet': 'Cat', 'pet_name': 'Chat'}]\n"
+     ]
+    }
+   ],
    "source": [
     "# use a for loop to create a list of the cat owners who are under the age of 28\n",
-    "cat_owners = None\n",
-    "# for loop goes here"
+    "cat_owners = []\n",
+    "# for loop goes here\n",
+    "for person in people:\n",
+    "    if person['pet'] != \"Dog\" and (person[\"age\"] < 28):\n",
+    "        cat_owners.append(person)\n",
+    "print(cat_owners)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Katie', 'age': 30, 'job': 'Teacher', 'pet': 'Dog', 'pet_name': 'Frank'}\n"
+     ]
+    }
+   ],
    "source": [
     "# use a for loop to find the first person who is above 29 years old in our list of people\n",
     "# remember to use a break and or continue statement\n",
     "thirty_something_yr_old = None\n",
-    "# for loop goes here"
+    "# for loop goes here\n",
+    "for person in people:\n",
+    "    if person['age'] < 30:\n",
+    "        continue\n",
+    "    else:\n",
+    "        thirty_something_yr_old = person\n",
+    "        break\n",
+    "print(thirty_something_yr_old)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Katie', 'Estelle', 'Gustav'] ['Frank', 'Gabby', 'Helen']\n"
+     ]
+    }
+   ],
    "source": [
     "# use a for loop to create a list of person names and another list of pet names for all dog owners\n",
-    "dog_owner_names = None\n",
-    "dog_names = None\n",
-    "# for loop goes here"
+    "dog_owner_names = []\n",
+    "dog_names = []\n",
+    "# for loop goes here\n",
+    "for person in people:\n",
+    "    if person['pet'] == 'Dog':\n",
+    "        dog_owner_names.append(person['name'])\n",
+    "        dog_names.append(person['pet_name'])\n",
+    "print(dog_owner_names, dog_names)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1575\n"
+     ]
+    }
+   ],
    "source": [
     "# use a for loop to create a list of odd numbers from the list of numbers from 0 to 100\n",
     "# each time there is an odd number, add 10 to it and append it to the list_of_odd_numbers_plus_ten\n",
@@ -183,7 +289,14 @@
     "list_of_numbers = list(range(0,100))\n",
     "list_of_odd_numbers_plus_ten = []\n",
     "for number in list_of_numbers:\n",
-    "    pass"
+    "    if number %2 != 0:\n",
+    "        list_of_odd_numbers_plus_ten.append(number + 10)\n",
+    "        continue\n",
+    "    if len(list_of_odd_numbers_plus_ten) >= 35:\n",
+    "        break\n",
+    "    else:\n",
+    "        continue\n",
+    "print(sum(list_of_odd_numbers_plus_ten))\n"
    ]
   },
   {
@@ -203,9 +316,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:learn-env] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-learn-env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -217,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
